July 5th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Add SEC documentation
- Update help for snmpttconvertmib

June 25th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Changed mysql_ping_insert to mysql_ping_on_insert.
- Added $Fz variable which outputs the processed FORMAT line for use in 
  EXEC lines so if the FORMAT and EXEC lines contain the same thing (minus
  the program to execute of course) the EXEC line can be simplified.
- Removed mib_descriptions_enable and replaced with description_mode and
  description_clean.  Can now use the description from either the 
  SNMPTT.CONF or the MIB files.
- Snmpttconvertmib:  Bug:  Was not parsing OBJECTS lines, only 
  VARIABLES lines.

June 24th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Removed references from sub substitute2.

June 23th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added config option mysql_ping_insert to enable / disable pinging the
  database before an INSERT.
- Changed ping_mysql subroutine to mysql_ping

June 18th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- MySQL:  Now does a ping before trying to do the INSERT even if
  mysql_ping_interval is disabled.
- Set default for mysql_ping_interval in snmptt to 500 match the .ini default.

June 17th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Removed escape_sequences_enable option and replaced it with variable
  substitutions $Fa, $Ff, $Fn, $Fr and $Ft.

June 11th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added mysql_ping_interval option to set how often the MySQL server
  should be 'pinged'.  If the 'ping' fails, it will attempt to re-connect
  to the database.
- Added escape_sequences_enable option to enable the use of 
  common escape sequences in FORMAT and EXEC lines.
- Added variable substitution $D to dump the description text from 
  the MIB file.  Enabled using the mib_descriptions_enable snmptt.ini
  variable.  Thanks to Toshiyuki Haginaga.
